--- a/src/app.css
+++ b/src/app.css
@@ -20,3 +20,48 @@ body {
     color: #00ffff;
     text-shadow: 0 0 10px rgba(0, 255, 255, 0.8);
 }
+
+@media screen and (max-width: 768px) {
+    .audio-toggle {
+        font-size: 1.2rem !important;
+        padding: 0.4rem 0.5rem !important;
+        bottom: 15px !important;
+        left: 15px !important;
+        box-shadow: 0 0 10px rgba(0, 255, 255, 0.5) !important;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .chat-button {
+        padding: 0.4rem 0.5rem !important;
+        font-size: 1.2rem !important;
+        width: 50px !important;
+        height: 50px !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 15px !important;
+        right: 15px !important;
+        box-shadow: 0 0 10px rgba(0, 255, 255, 0.5) !important;
+    }
+
+    .chatbox {
+        width: 90%;
+        right: 5%;
+        bottom: 70px;
+        max-height: 80%;
+    }
+
+    .chat-header {
+        font-size: 0.9rem;
+    }
+
+    .chat-input input {
+        font-size: 0.8rem;
+    }
+
+    .chat-input button {
+        font-size: 0.8rem;
+        padding: 0.4rem 0.8rem;
+    }
+}
